tests/test_proof/bad/output/enums-overlap.catala_en.Proof
[RESULT] [A.y] This variable never returns an empty error
[RESULT] [A.y] No two exceptions to ever overlap for this variable
[RESULT] [A.x] This variable never returns an empty error
[ERROR] [A.x] At least two exceptions overlap for this variable:
  --> tests/test_proof/bad/enums-overlap.catala_en
   | 
15 |   context x content integer
   |           ^
   + Test
Counterexample generation is disabled so none was generated.
